# lexora

./: .env.example  .gitignore  Makefile  NOTES.md  README.md  docker-compose.yml  qa-hooks.sh
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 003_phase3_diagnostic_sessions.py  10a1_phrase_pairs_table.py  10a2_fsrs_cards_id_identity.py  496091d14711_add_embedding_columns_and_hnsw.py  7a1_collocations_table.py  7a2_prepositional_objects_table.py  8a1_phrases_table.py  9a1_fsrs_cards_exercise_type.py  a15ec4b9f736_phase2_users_weakness_profiles.py  ca03ee90afb6_baseline_words_examples_verb_.py  p5a2_unique_fsrs_grade_logs.py
backend/app/: anki_builder.py  auth.py  bilingual.py  bootstrap.py  cloze.py  collocation.py  comprehension.py  crud.py  database.py  embeddings.py  fsrs.py  idiom.py  llm.py  main.py  match.py  models.py  observability.py  passwords.py  phrase_match.py  retrieval.py  schemas.py
backend/app/diagnostic/: questions.py  routes.py  scoring.py
backend/app/eval/: __init__.py  ragas.py  retrieval_compare.py
backend/app/seeds/: collocations_seed.json  prepositional_objects_seed.json
backend/data/: attested_pairs.json  dwds_idioms_subset.json  goethe_schiller_idioms_subset.json
backend/generated_decks/: Verb_freq5_20260512_001346.apkg  Verb_freq5_bothdir_20260511_224530.apkg  Verb_freq5_bothdir_20260511_230849.apkg  Verb_freq5freq4_bothdir_20260511_224628.apkg  Verb_freq5freq4_bothdir_20260511_230953.apkg  alltypes_allfreqs_bothdir_20260511_224511.apkg
backend/scripts/: __init__.py  append_ragas_env_example.py  backfill_embeddings.py  build_cloze_eval_set.py  build_match_comprehension_eval_sets.py  eval_cloze.py  eval_ragas.py  eval_retrieval_compare.py  label_phrase_match_pairs.py  optimize_cloze.py  optimize_comprehension.py  optimize_match.py  optimize_phrase_match.py  seed_collocations.py  seed_phrase_pairs.py  seed_phrases_attestations.py  seed_phrases_dwds.py  seed_prepositional_objects.py
backend/tests/: stub_seed_similarity.py  test_auth.py  test_cloze.py  test_cloze_collocation_flag.py  test_collocation.py  test_collocations_schema.py  test_comprehension.py  test_comprehension_endpoint.py  test_diagnostic.py  test_due.py  test_due_queue_widened.py  test_embeddings.py  test_eval.py  test_fsrs.py  test_fsrs_card_exercise_type.py  test_fsrs_cards_id_autoincrement.py  test_fsrs_schema.py  test_grade.py  test_idiom.py  test_idiom_endpoint.py  test_llm.py  test_match.py  test_match_endpoint.py  test_match_partner_lang.py  test_optimize_phrase_match.py  test_phrase_match.py  test_phrase_match_endpoint.py  test_phrase_match_eval.py  test_phrase_pairs_schema.py  test_phrases_schema.py  test_retrieval.py  test_retrieval_compare.py  test_schemas.py  test_seed_phrase_pairs.py  test_seed_phrases_attestations.py  test_seed_phrases_dwds.py  test_session_mixing.py  test_users_weakness.py
backend/tests/fixtures/: phrase_pairs_fixture.json  phrases_attestations_fixture.json  phrases_fixture.json
backend/tests/test_eval/: __init__.py  test_cloze_eval.py  test_comprehension_optimize.py  test_phrase_match_optimize.py  test_ragas.py
data/: main.py  pyproject.toml
data/anki/: extract-and-filter.ipynb
data/anki/apkg_extracted/: media
data/vocabeo/: elements.txt  page_source.html  scraper.py  tester.ipynb  verb_conjugations.json  vocabeo_backup.json
docs/: EVAL.md  PHASE-10.md  PHASE-4.md  PHASE-5.md  PHASE-6.md  PHASE-7.md  PHASE-8.md
eval/: cloze_judgments.jsonl  comprehension_judgments.jsonl  match_judgments.jsonl  phrase_match_judgments.jsonl  phrase_match_judgments.manifest.json
frontend/: Dockerfile  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/src/: App.tsx  auth.ts  index.css  main.tsx  test-setup.ts
frontend/src/api/: cloze.ts  diagnostic.ts  due.ts  exercises.ts  session.ts  weakness.ts
frontend/src/components/: AuthForm.tsx  AxisSlider.tsx  DiagnosticQuestion.tsx  DiagnosticResult.tsx  ExerciseCard.tsx  GradeButtons.tsx  Header.tsx  ProgressBar.tsx  ProtectedRoute.tsx  delta.ts
frontend/src/pages/: ClozePage.tsx  ComprehensionPage.tsx  DiagnosticPage.tsx  Home.tsx  IdiomPage.tsx  MatchingPage.tsx  PhraseMatchPage.tsx  SessionPage.tsx  StudyStub.tsx  WeaknessProfilePage.tsx
postgres/init/: 01-pgvector.sql
scripts/: fix_reversed_cards.py  reverse_cards.py  write_env_example_phase4_1.py
(+6 files in other folders)
