[project]
name = "backend"
version = "0.2.0"
description = "German vocabulary learning app backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "genanki>=0.13.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "langfuse>=2.50.0,<3.0",
    "httpx>=0.27.0",
    "pgvector>=0.3.6",
    "pytest>=8.3.0",
    "respx>=0.21.0",
]

[tool.uv]

[dependency-groups]
dev = []

[project.scripts]
backend = "backend.main:main"