[project]
name = "backend"
version = "0.2.0"
description = "German vocabulary learning app backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "genanki>=0.13.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "langfuse>=2.50.0,<3.0",
    "httpx>=0.27.0",
    "pgvector>=0.3.6",
    "pytest>=8.3.0",
    "respx>=0.21.0",
    # Phase 2.2 — auth (card t_74c3aa1e). bcrypt password hashing
    # (direct — passlib 1.7.4 is incompatible with bcrypt 5.x on its
    # wrap-bug detection probe; we just use the bcrypt module's
    # gensalt + hashpw + checkpw with rounds=12 explicit), JWT
    # (HS256) cookie issuance + verification, multipart form parsing.
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    # pydantic[email] enables EmailStr on auth request bodies.
    "email-validator>=2.2.0",
]

[tool.uv]

[dependency-groups]
dev = []

[project.scripts]
backend = "backend.main:main"