[project]
name = "backend"
version = "0.2.0"
description = "German vocabulary learning app backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "genanki>=0.13.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "langfuse>=2.50.0,<3.0",
    "httpx>=0.27.0",
    "pgvector>=0.3.6",
    "pytest>=8.3.0",
    "respx>=0.21.0",
    # Phase 4.2 — cloze exercise generator (card t_bdd9ffbe).
    # ``instructor`` wraps ``openai.OpenAI`` (used against OpenRouter,
    # which speaks the OpenAI-compatible wire format) to enforce
    # Pydantic-validated structured output with bounded retries
    # (Hard rule #6). ``dspy`` powers the optimization path
    # (Phase 4.4's MIPROv2 / BootstrapFewShot against the held-out
    # eval set) and is imported only by ``scripts/optimize_cloze.py``
    # and the ``ClozeModule`` class — the production path goes
    # through instructor, not dspy.
    "instructor>=1.3.0",
    "dspy>=2.5.0",
    # Phase 2.2 — auth (card t_74c3aa1e). bcrypt password hashing
    # (direct — passlib 1.7.4 is incompatible with bcrypt 5.x on its
    # wrap-bug detection probe; we just use the bcrypt module's
    # gensalt + hashpw + checkpw with rounds=12 explicit), JWT
    # (HS256) cookie issuance + verification, multipart form parsing.
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    # pydantic[email] enables EmailStr on auth request bodies.
    "email-validator>=2.2.0",
    "fsrs==4.1.2",
    # Phase 6.7 — Ragas regression detector (card t_bb4e96e0).
    # The library is lazy-imported by scripts.eval_ragas so the
    # CI smoke path (--dry-run) doesn't pay the import cost.
    # The LLM-judge path (--live) is the manual-QA path, not
    # exercised in CI; it's documented in backend/scripts/eval_ragas.py
    # and docs/EVAL.md (Phase 6.8 follow-up).
    #
    # ``datasets`` is a transitive Ragas dep but the langchain
    # ecosystem on Python 3.12 is in a state of flux (the
    # ``langchain_community.chat_models.vertexai`` import path
    # moves package-to-package across minor versions). We pin
    # loosely and let the live-path importer fail with a clear
    # warning + dry-run fallback when the Ragas stack isn't
    # fully wired (the canonical fix is to install Ragas in
    # a fresh venv per the docs/EVAL.md manual-QA section).
    "ragas>=0.2.0,<0.4",
    "datasets>=2.14.0",
]

[tool.uv]

[dependency-groups]
dev = []

[project.scripts]
backend = "backend.main:main"
